[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/oddballz.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.262745, 0.305882, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Obstacles v0.1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button-tittle-play" type="Button" parent="."]
margin_left = 545.956
margin_top = 274.059
margin_right = 727.956
margin_bottom = 356.059
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "PLAY!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button-title-settings" type="Button" parent="."]
margin_left = 522.156
margin_top = 391.473
margin_right = 767.156
margin_bottom = 473.473
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "SETTINGS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button-title-quit" type="Button" parent="."]
margin_left = 523.742
margin_top = 527.927
margin_right = 768.742
margin_bottom = 609.927
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "QUIT :("
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button-tittle-play" to="." method="_on_buttontittleplay_pressed"]
[connection signal="pressed" from="button-title-settings" to="." method="_on_buttontitlesettings_pressed"]
[connection signal="pressed" from="button-title-quit" to="." method="_on_buttontitlequit_pressed"]
